spec/data/mockDefs/valid/mockDefValid3.js
const reassociateName = () => {};
const refreshMemory = () => {};

module.exports = function () {
  return {
    respondTo: 'PUT',
    endpoint: '/api/correct/:name',
    handledBy: [
      reassociateName,
      refreshMemory,
    ],
  };
};
